# LangChain-Practice

./: .gitignore  pyproject.toml
CH-1/: Basics.ipynb  Messages-Prompts.ipynb  Structured-Outputs.ipynb
CH-2/: Chains.ipynb  Conditional-Chain.ipynb  Custom-Chains.ipynb  Parallel-Chains.ipynb
